--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,20 +17,23 @@ categories = [
 vendored-openssl = ['openssl/vendored']
 
 [dependencies]
-cargo-husky  = "1"
-chrono       = { version = "0.4", features = ["serde"] }
-hyper        = "0.14"
-log          = "0.4"
-openssl      = "0.10"
-prost        = "0.11"
-prost-build  = "0.11"
-prost-types  = "0.11"
-serde        = "1.0"
-serde_json   = "1.0"
-tokio        = { version = "1.20", features = ["full"] }
-tokio-util   = "0.7"
-tonic        = "0.8"
-tonic-health = "0.7"
+cargo-husky   = "1"
+chrono        = { version = "0.4", features = ["serde"] }
+duplicate     = "0.4"
+hyper         = "0.14"
+log           = "0.4"
+openssl       = "0.10"
+ordered-float = { version = "3.4", features = ["serde"] }
+prost         = "0.11"
+prost-build   = "0.11"
+prost-types   = "0.11"
+serde         = "1.0"
+serde_json    = "1.0"
+tokio         = { version = "1.20", features = ["full"] }
+tokio-util    = "0.7"
+tonic         = "0.8"
+tonic-health  = "0.7"
+uuid          = { version = "1.2", features = ["v4", "serde"] }
 
 [dependencies.log4rs]
 features = [
