--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,4 +1,5 @@
 [package]
+authors     = ["GoodluckH"]
 description = "Assets Service REST server"
 edition     = "2021"                                                       # Allowed values are 2015, 2018, 2021
 homepage    = "https://www.arrowair.com/docs/documentation/services/intro"
@@ -20,6 +21,8 @@ vendored-openssl = ['openssl/vendored']
 axum                    = "0.5"
 cargo-husky             = "1"
 chrono                  = { version = "0.4", features = ["serde"] }
+clap                    = { version = "4.0", features = ["derive"] }
+config                  = "0.13"
 duplicate               = "0.4"
 futures                 = "0.3"
 hyper                   = "0.14"
@@ -33,7 +36,7 @@ prost-types             = "0.11"
 rand                    = { version = "0.8" }
 serde                   = "1.0"
 serde_json              = "1.0"
-svc-storage-client-grpc = { git = "https://github.com/Arrow-air/svc-storage", branch = "main" }
+svc-storage-client-grpc = { git = "https://github.com/Arrow-air/svc-storage", branch = "develop" }
 tokio                   = { version = "1.20", features = ["full"] }
 tokio-util              = "0.7"
 tonic                   = "0.8"
