--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,7 +7,7 @@ keywords    = ["vtol", "server", "assets"]                                 # max
 license     = "BUSL-1.1"
 name        = "svc-assets"
 repository  = "https://github.com/Arrow-air/svc-assets"
-version     = "0.2.0-develop.2"
+version     = "0.3.0-develop.5"
 
 categories = [
   "aerospace::drones",
@@ -36,7 +36,7 @@ prost-types             = "0.11"
 rand                    = { version = "0.8" }
 serde                   = "1.0"
 serde_json              = "1.0"
-svc-storage-client-grpc = { git = "https://github.com/Arrow-air/svc-storage", branch = "develop" }
+svc-storage-client-grpc = { git = "https://github.com/Arrow-air/svc-storage", tag = "v0.9.0-develop.10" }
 tokio                   = { version = "1.20", features = ["full"] }
 tokio-util              = "0.7"
 tonic                   = "0.8"
