--- a/client-grpc/Cargo.toml
+++ b/client-grpc/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-description = "Assets Service REST client"
+description = "Assets Service GRPC client"
 edition     = "2021"                                                       # Allowed values are 2015, 2018, 2021
 homepage    = "https://www.arrowair.com/docs/documentation/services/intro"
 keywords    = ["vtol", "client", "assets"]                                 # max 5
-license     = "BUSL-1.1"
 name        = "svc-assets-client-grpc"
 repository  = "https://github.com/Arrow-air/svc-assets"
 version     = "0.3.0-develop.11"
