--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,11 @@ services:
       interval: 2s
       timeout: 1s
       retries: 3
+      start_period: 30s
+    volumes:
+      - type: bind
+        source: log4rs.yaml
+        target: /log4rs.yaml
 
   example:
     links:
