--- a/log4rs.yaml
+++ b/log4rs.yaml
@@ -5,6 +5,20 @@ appenders:
     encoder:
       # https://medium.com/nikmas-group-rust/advanced-logging-in-rust-with-log4rs-2d712bb322de
       pattern: "{d(%Y-%m-%d %H:%M:%S)} | {({l}):5.5} | {f}:{L} — {m}{n}"
+  grpc_requests:
+    kind: rolling_file
+    path: "log/grpc_requests.log"
+    policy:
+      trigger:
+        kind: size
+        limit: 20mb
+      roller:
+        kind: fixed_window
+        pattern: logs/grpc_requests_{}.gz
+        count: 5
+        base: 1
+    encoder:
+      kind: json
   rest_requests:
     kind: rolling_file
     path: "log/rest_requests.log"
@@ -24,14 +38,12 @@ root:
   level: info
   appenders:
     - stdout
-
 loggers:
-  app::req:
+  app::grpc:
     level: info
     appenders:
-      - stdout
+      - grpc_requests
+  app::rest:
+    level: info
+    appenders:
       - rest_requests
-    additive: false
-
-  app::grpc:
-    level: warn
