--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,28 +1,27 @@
 [package]
 authors     = ["GoodluckH"]
 description = "Assets Service REST server"
-edition     = "2021"                                                       # Allowed values are 2015, 2018, 2021
-homepage    = "https://www.arrowair.com/docs/documentation/services/intro"
-keywords    = ["vtol", "server", "assets"]                                 # max 5
-license     = "BUSL-1.1"
+keywords    = ["vtol", "server", "assets"] # max 5
 name        = "svc-assets"
-repository  = "https://github.com/Arrow-air/svc-assets"
 version     = "0.3.0-develop.11"
 
-categories = [
-  "aerospace::drones",
-  "aerospace::protocols",
-] # max 5 -- https://crates.io/category_slugs
+categories.workspace   = true
+edition.workspace      = true
+homepage.workspace     = true
+license-file.workspace = true
+repository.workspace   = true
 
 [features]
 vendored-openssl = ['openssl/vendored']
 
 [dependencies]
+anyhow        = "1.0"
 axum          = "0.5"
 cargo-husky   = "1"
 chrono        = { version = "0.4", features = ["serde"] }
 clap          = { version = "4.0", features = ["derive"] }
 config        = "0.13"
+dotenv        = "0.15"
 duplicate     = "0.4"
 futures       = "0.3"
 hyper         = "0.14"
