--- a/client-rest/Cargo.toml
+++ b/client-rest/Cargo.toml
@@ -3,6 +3,7 @@ description = "Arrow Storage service REST client"
 name        = "svc-assets-client-rest"
 version     = "0.1.0"
 
+authors.workspace      = true
 categories.workspace   = true
 edition.workspace      = true
 homepage.workspace     = true
