--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-authors     = ["GoodluckH"]
 description = "Assets Service REST server"
 keywords    = ["vtol", "server", "assets"] # max 5
 name        = "svc-assets"
 version     = "0.3.0-develop.11"
 
+authors.workspace      = true
 categories.workspace   = true
 edition.workspace      = true
 homepage.workspace     = true
@@ -44,7 +44,7 @@ uuid          = { version = "1.2", features = ["v4", "serde"] }
 
 [dependencies.svc-storage-client-grpc]
 git = "https://github.com/Arrow-air/svc-storage"
-tag = "v0.9.0-develop.15"
+tag = "v0.10.0"
 
 [dependencies.log4rs]
 features = [
