--- a/log4rs.yaml
+++ b/log4rs.yaml
@@ -7,7 +7,7 @@ appenders:
       pattern: "{d(%Y-%m-%d %H:%M:%S)} | {({l}):5.5} | {f}:{L} — {m}{n}"
   grpc_requests:
     kind: rolling_file
-    path: "log/grpc_requests.log"
+    path: "logs/grpc_requests.log"
     policy:
       trigger:
         kind: size
@@ -21,7 +21,7 @@ appenders:
       kind: json
   rest_requests:
     kind: rolling_file
-    path: "log/rest_requests.log"
+    path: "logs/rest_requests.log"
     policy:
       trigger:
         kind: size
@@ -35,15 +35,15 @@ appenders:
       kind: json
 
 root:
-  level: info
+  level: debug
   appenders:
     - stdout
 loggers:
   app::grpc:
-    level: info
+    level: debug
     appenders:
       - grpc_requests
   app::rest:
-    level: info
+    level: debug
     appenders:
       - rest_requests
