--- a/log4rs.yaml
+++ b/log4rs.yaml
@@ -4,7 +4,7 @@ appenders:
     kind: console
     encoder:
       # https://medium.com/nikmas-group-rust/advanced-logging-in-rust-with-log4rs-2d712bb322de
-      pattern: "{d(%Y-%m-%d %H:%M:%S)} | {({l}):5.5} | {f}:{L} — {m}{n}"
+      pattern: "{d(%Y-%m-%d %H:%M:%S)} | {I} | {h({l}):5.5} | {f}:{L} | {m}{n}"
   grpc_requests:
     kind: rolling_file
     path: "logs/grpc_requests.log"
@@ -33,17 +33,40 @@ appenders:
         base: 1
     encoder:
       kind: json
+  tests:
+    kind: rolling_file
+    path: "logs/tests.log"
+    policy:
+      trigger:
+        kind: size
+        limit: 20mb
+      roller:
+        kind: fixed_window
+        pattern: logs/tests_{}.gz
+        count: 5
+        base: 1
+    encoder:
+      kind: json
 
 root:
-  level: debug
+  level: info
   appenders:
     - stdout
+
 loggers:
   app::grpc:
-    level: debug
+    level: info
     appenders:
       - grpc_requests
   app::rest:
-    level: debug
+    level: info
     appenders:
       - rest_requests
+  test::ut:
+    level: info
+    appenders:
+      - tests
+  test::it:
+    level: info
+    appenders:
+      - tests
