--- a/.link-checker.config.json
+++ b/.link-checker.config.json
@@ -1,16 +1,19 @@
 {
-    "ignorePatterns": [
-        {
-        "pattern": "nocodb.aetheric.nl"
-        }
-    ],
-    "httpHeaders": [
-        {
-        "urls": ["https://docs.github.com/"],
-        "headers": {
-            "Accept-Encoding": "zstd, br, gzip, deflate"
-        }
-        }
-    ],
-    "timeout": "5s"
+  "ignorePatterns": [
+    {
+      "pattern": "nocodb.aetheric.nl"
+    },
+    {
+      "pattern": "http://localhost"
+    }
+  ],
+  "httpHeaders": [
+    {
+      "urls": ["https://docs.github.com/"],
+      "headers": {
+        "Accept-Encoding": "zstd, br, gzip, deflate"
+      }
+    }
+  ],
+  "timeout": "5s"
 }
