--- a/client-rest/Cargo.toml
+++ b/client-rest/Cargo.toml
@@ -12,14 +12,14 @@ license-file.workspace = true
 repository.workspace   = true
 
 [dependencies]
-ordered-float = { version = "4.1", features = ["serde"] }
+ordered-float = { version = "4.3", features = ["serde"] }
 serde         = "1.0"
 serde_json    = "1.0"
 
 [dependencies.lib-common]
 features = ["grpc"]
 git      = "https://github.com/aetheric-oss/lib-common.git"
-tag      = "v2.0.0"
+tag      = "v3.0.0"
 
 # Get types from storage client
 [dependencies.svc-storage-client-grpc]
@@ -28,12 +28,20 @@ git      = "https://github.com/aetheric-oss/svc-storage"
 tag      = "v0.12.1"
 
 [dev-dependencies]
-hyper = { version = "0.14", features = ["full"] }
-tokio = { version = "1.33", features = ["full"] }
+http-body-util = { version = "0.1" }
+hyper          = { version = "1.4", features = ["full"] }
+hyper-util     = { version = "0.1" }
+tokio          = { version = "1.40", features = ["full"] }
 
 [dependencies.utoipa]
 features = ["axum_extras", "chrono"]
-version  = "4.0"
+version  = "4.2"
 
 [[example]]
 name = "rest"
+
+# https://github.com/xd009642/tarpaulin?tab=readme-ov-file#ignoring-code-in-files
+# removes warnings introduced by rust 1.8
+# can be removed when the cfg attributes can be replaced with `#[coverage(off)]` (currently only available in nightly)
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
